fixed RGB not showing bug, and had level buttons change color

--- a/style.sass
+++ b/style.sass
@@ -30,16 +30,14 @@ p
   background-color: rgb(240, 240, 240)
   color: rgb(50, 50, 50)
 
-
 #container
   margin: 0 auto
   max-width: 600px
 
-#on
-  background: rgb(150, 250, 200)
-
 .level
   padding: 1%
+  padding-top: 0
+  background-color: rgb(240, 240, 240)
 
 .square
   width: 30%
